--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css"/>
     <title>Document</title>
 </head>
 <body>
-    <h1>UNITE DE TIARET</h1>
+    <a class="connexion" href="index.php"><span style="color:black">UNITE</span> DE TIARET</a>
 </body>
 </html>
