--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css"/>
-    <title>Document</title>
+    <title>UNITE DE TIARET</title>
 </head>
 <body>
     <a class="connexion" href="index.php"><span style="color:black">UNITE</span> DE TIARET</a>
